--- a/Project Voldemort/Project Voldemort.csproj
+++ b/Project Voldemort/Project Voldemort.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="ScriptHookVDotNet2, Version=2.10.9.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\ScriptHookVDotNet2.2.10.9\lib\net40\ScriptHookVDotNet2.dll</HintPath>
     </Reference>
@@ -44,10 +45,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssistlessFlight.cs" />
+    <Compile Include="FlightMovement.cs" />
     <Compile Include="GeneralTools.cs" />
+    <Compile Include="OnTicToggleEffects.cs" />
     <Compile Include="Spells.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
