Added flight mechanic. polishing in later commits

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Harry Potter Spells/v16
+/.vs/Harry Potter Spells/v15
